2000-05-26  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.h,
	libgnomevfs/gnome-vfs-mime-handlers.c: Add stub implementations
	for all functions. Add `gnome_vfs_mime_application_free' function.

	* libgnomevfs/Makefile.am: Add
	`libgnomevfs/gnome-vfs-mime-handlers.c' to the build.
	
	* libgnomevfs/gnome-vfs-mime-handlers.h: Add a "name" field to the
	GnomeVFSMimeApplication struct, as John and I discussed.
	
	* libgnomevfs/gnome-vfs-types.h: include <glib.h>, not jsut
	<glibconfig.h> (glibconfig is really supposed to be an internal
	header anyway).

2000-05-26  Gene Z. Ragan  <gzr@eazel.com>

	All of the below is work in progress on the Files and Programs
	capplet.  I am currently retro-fitting jrb's capplet to use
	our modified capplet layout and new gnome-vfs mime API.
	This capplet does not currently work properly, but does build and
	causes no harm if run.
	
	* mime-type-capplet/edit-window.c: (ext_remove), (apply_changes),
	(initialize_main_win), (initialize_main_win_vals),
	(launch_edit_window), (hide_edit_window), (show_edit_window),
	(populate_application_menu), (populate_component_menu):
	
	* mime-type-capplet/mime-data.c: (selected_row_callback),
	(edit_clicked):
	
	* mime-type-capplet/nautilus-mime-type.desktop:
	Changed entries so capplet would register itself as "Files and Programs"

2000-05-26  John Sullivan  <sullivan@eazel.com>

	* data/mime/gnome-vfs.keys: Added one more description.
	This had been sitting around on my disk for awhile but
	I forgot.

2000-05-26  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.h: Header for upcoming mime
	handler API.
	* libgnomevfs/Makefile.am: Install the new header.

2000-05-24  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c:
	(gnome_vfs_sniff_buffer_looks_like_text):
	* libgnomevfs/gnome-vfs-mime-sniff-buffer.h:
	* libgnomevfs/gnome-vfs-mime.c: (gnome_vfs_get_mime_type):
	Implement a simple version of the call. Rename to a better